# Projeto_Braco_Robotico

./: README.md  SkeletonBasics.cpp  SkeletonBasics.h  automatizacao.py  classificador.py  classificador_final.py  classifier.py  filtrar_imagens.py  server.py  server_att.py  server_atualizado.py
classifier/: RobotArm.py  __init__.py  automatizacao.py  classificador.py  classificador_final.py  filtrar_imagens.py  robolink.py  server.py
classifier/scripts/: RobotArm.py  example_benchmarks.py  example_keyboard.py  tcp_client_test.py
cxxsrc/: CMakeLists.txt  ImageRenderer.cpp  ImageRenderer.h  SkeletonBasics.cpp  SkeletonBasics.h
data/: data_01_grip_and_xyz.txt  data_02_xyz_only.txt
simulation/: Denso-VP-6242.robot  ICGI2018_station.rdk
